// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RevenueBreakdown /> should render correctly with revenue data 1`] = `
<Styled(styled.div)>
  <styled.p>
    Revenue Breakdown
  </styled.p>
  <styled.div
    height="0.75rem"
  />
  <HorizontalBars
    colors={
      Array [
        "#004",
        "#007",
        "#44b",
        "#3af",
        "#667",
        "#ddd",
        "#a3f",
      ]
    }
    data={
      Array [
        1000,
        1000,
        1000,
      ]
    }
  />
  <Flex
    flexWrap="wrap"
    margin="0 -1rem -1rem"
  >
    <FlexItem
      flex="0 0 auto"
      key="0"
      padding="1rem"
    >
      <LegendItem
        color="#004"
        label="Single Game"
        value="$1,000"
      />
    </FlexItem>
    <FlexItem
      flex="0 0 auto"
      key="1"
      padding="1rem"
    >
      <LegendItem
        color="#007"
        label="Group Tickets"
        value="$1,000"
      />
    </FlexItem>
    <FlexItem
      flex="0 0 auto"
      key="2"
      padding="1rem"
    >
      <LegendItem
        color="#44b"
        label="Single Suites"
        value="$1,000"
      />
    </FlexItem>
  </Flex>
</Styled(styled.div)>
`;

exports[`<RevenueBreakdown /> should render correctly with revenue data 2`] = `
<Styled(styled.div)>
  <styled.p>
    Tickets Sold Breakdown
  </styled.p>
  <styled.div
    height="0.75rem"
  />
  <HorizontalBars
    colors={
      Array [
        "#004",
        "#007",
        "#44b",
        "#3af",
        "#667",
        "#ddd",
        "#a3f",
      ]
    }
    data={
      Array [
        undefined,
        undefined,
        undefined,
      ]
    }
  />
  <Flex
    flexWrap="wrap"
    margin="0 -1rem -1rem"
  >
    <FlexItem
      flex="0 0 auto"
      key="0"
      padding="1rem"
    >
      <LegendItem
        color="#004"
        label="Single Game"
        value="--"
      />
    </FlexItem>
    <FlexItem
      flex="0 0 auto"
      key="1"
      padding="1rem"
    >
      <LegendItem
        color="#007"
        label="Group Tickets"
        value="--"
      />
    </FlexItem>
    <FlexItem
      flex="0 0 auto"
      key="2"
      padding="1rem"
    >
      <LegendItem
        color="#44b"
        label="Single Suites"
        value="--"
      />
    </FlexItem>
  </Flex>
</Styled(styled.div)>
`;

exports[`<RevenueBreakdown /> should render the loading state correctly 1`] = `<BreakdownLoader />`;
